<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dane</string>
    <string name="description">Usuń wszystkie dane</string>
    <string name="producent">Producent</string>
    <string name="model">Model</string>
    <string name="androidVersion">Wersja androida</string>
    <string name="webSite">Strona internetowa</string>
    <string name="fillField">Uzupełnij pole</string>
    <string name="cancel">ANULUJ</string>
    <string name="save">ZAPISZ</string>
    <string name="website">Strona</string>
    <string name="fab">FAB</string>
    <string name="added">Dodano telefon</string>
    <string name="canceled">Anulowano</string>
    <string name="invalidUrl" tools:ignore="Typos">Niepoprawny adres!</string>
    <string name="emptyFields">Wypełnij wszystkie pola</string>
    <string name="update">Zaktualizuj</string>
    <string name="producer">Producent</string>
    <string name="updated">Zaktualizowano</string>
</resources>